--- a/radar_processing/package.xml
+++ b/radar_processing/package.xml
@@ -25,6 +25,7 @@
     <build_depend>roslint</build_depend>
     <build_depend>rospy</build_depend>
     <build_depend>sensor_msgs</build_depend>
+    <build_depend>autosea_msgs</build_depend>
     <build_depend>std_msgs</build_depend>
     <build_depend>pcl_ros</build_depend>
     <build_depend>jsk_recognition_msgs</build_depend>
@@ -36,6 +37,7 @@
     <build_export_depend>roslint</build_export_depend>
     <build_export_depend>rospy</build_export_depend>
     <build_export_depend>sensor_msgs</build_export_depend>
+    <build_export_depend>autosea_msgs</build_export_depend>
     <build_export_depend>std_msgs</build_export_depend>
     <build_export_depend>pcl_ros</build_export_depend>
     <build_export_depend>jsk_recognition_msgs</build_export_depend>
@@ -47,6 +49,7 @@
     <exec_depend>roslint</exec_depend>
     <exec_depend>rospy</exec_depend>
     <exec_depend>sensor_msgs</exec_depend>
+    <exec_depend>autosea_msgs</exec_depend>
     <exec_depend>std_msgs</exec_depend>
     <exec_depend>pcl_ros</exec_depend>
     <exec_depend>jsk_recognition_msgs</exec_depend>
