--- a/radar_processing/package.xml
+++ b/radar_processing/package.xml
@@ -28,9 +28,11 @@
     <build_depend>autosea_msgs</build_depend>
     <build_depend>std_msgs</build_depend>
     <build_depend>pcl_ros</build_depend>
+    <build_depend>landmap_lib</build_depend>
     <build_depend>jsk_recognition_msgs</build_depend>
 
     <build_export_depend>custom_msgs</build_export_depend>
+    <build_export_depend>landmap_lib</build_export_depend>
     <build_export_depend>diagnostic_msgs</build_export_depend>
     <build_export_depend>geometry_msgs</build_export_depend>
     <build_export_depend>roscpp</build_export_depend>
@@ -53,6 +55,7 @@
     <exec_depend>std_msgs</exec_depend>
     <exec_depend>pcl_ros</exec_depend>
     <exec_depend>jsk_recognition_msgs</exec_depend>
+    <exec_depend>landmap_lib</exec_depend>
 
     <!-- The export tag contains other, unspecified, tags -->
     <export>
