--- a/landmap_lib/package.xml
+++ b/landmap_lib/package.xml
@@ -12,8 +12,10 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>roscpp</build_depend>
+  <build_depend>roslib</build_depend>
 
   <exec_depend>roscpp</exec_depend>
+  <exec_depend>roslib</exec_depend>
 
 
   <export>
