--- a/revolt_state_estimator/config/navsat_transform.yaml
+++ b/revolt_state_estimator/config/navsat_transform.yaml
@@ -5,6 +5,13 @@ navsat_transform_node:
 
     # How often (Hz) to check for new GPS fixes & (optionally) republish /gps/filtered
     frequency: 30.0
+
+    sensor_timeout: 10.0
+    transform_timeout: 10.0
+
+    # If the filter sees a jump back in time, the filter is reset (convenient for testing with rosbags!)
+    reset_on_time_jump: true
+
     # Seconds to wait before computing the local origin (datum → world transform)
     delay: 3.0
 
@@ -24,6 +31,6 @@ navsat_transform_node:
     use_odometry_yaw: false
     wait_for_datum: false            # don’t block waiting for first fix
     # Manually seed datum [lat, lon, alt] if you prefer
-    datum: [55.944904, -3.186693, 0.0]
+    #datum: [63.0, 10.0, 44.0]
 
     print_diagnostics: true
