--- a/revolt_state_estimator/config/ekf.yaml
+++ b/revolt_state_estimator/config/ekf.yaml
@@ -1,58 +1,51 @@
-ekf_node:
+ekf_filter_node:
   ros__parameters:
-    # ── Timing & debug ────────────────────────────────────────────────────
-    use_sim_time: false
-    frequency: 30.0
-    sensor_timeout: 0.1
-    two_d_mode: true
-    print_diagnostics: true
-    debug: false
-    publish_tf: true
+    # ── Timing & Debug ─────────────────────────────────────
+    use_sim_time: false                # real‐time, not /clock
+    frequency: 30.0                    # EKF output rate (Hz)
+    two_d_mode: false                  # keep full 3D (set true for pure planar)
+    print_diagnostics: true            # write to /diagnostics[_agg]
+    debug: false                       # extra log matrix dumps
+    publish_tf: true                   # broadcast odom → base_link
+    disabled_at_startup: false         # start fusing immediately
+    reset_on_time_jump: true           # reset filter if time jumps backwards
+    sensor_timeout: 0.1                # wait up to 0.1 s for any sensor before predict‐only
+    transform_timeout: 0.0             # how long to wait for TF lookups
 
+    # ── Frames ───────────────────────────────────────────────
+    world_frame: odom                   # our “world” in which we fuse
+    odom_frame: odom                    # the drifting odom frame
+    base_link_frame: base_link          # the ship’s body‐fixed frame
 
-    #sensor_timeout: 10.0
-    #transform_timeout: 10.0
-
-    # If the filter sees a jump back in time, the filter is reset (convenient for testing with rosbags!)
-    reset_on_time_jump: true
-
-
-    # debug_out_file: /full/path/to/debug.txt
-
-    # ── Coordinate frames ────────────────────────────────────────────────
-    world_frame: odom
-    odom_frame: odom
-    base_link_frame: base_link
-
-    # ── GNSS‐derived pose input ─────────────────────────────────────────
+    # ── GPS (navsat_transform → /odometry/gps) ──────────────
     odom0: /odometry/gps
-    odom0_config: [ true,  true,  false,  # fuse X,Y
-                    false, false, true,   # fuse yaw
-                    false, false, false,  # no linear vel
-                    false, false, false,  # no angular rates
-                    false, false, false]  # no accel
-    odom0_differential: false
+    odom0_config: [  true,  true, false,   # fuse X, Y
+                     false, false, true,   # fuse yaw
+                     false, false, false,  # no VX,VY,VZ
+                     false, false, false,  # no ωx,ωy,ωz
+                     false, false, false]  # no ax, ay, az
+    odom0_differential: false           # absolute pose, not differential
+    odom0_queue_size: 1
+    odom0_nodelay: false
+    odom0_relative: false
 
-    # ── IMU input ───────────────────────────────────────────────────────
+    # ── IMU ───────────────────────────────────────────────────
     imu0: /imu/data
-    imu0_config: [false, false, false,
-                  false, false, false,
-                  false, false, false,
-                  false,  false,  true,    # fuse angular rates
-                  true,  true,  false]    # fuse linear accel
+    imu0_config: [  false, false, false,   # no X,Y,Z
+                     false, false, false,   # no roll,pitch,yaw from IMU orient
+                     false, false, false,   # no linear velocity
+                     false, false, true,    # fuse ωz only
+                     true,  true,  false]   # fuse ax, ay only
     imu0_remove_gravitational_acceleration: true
-    gravitational_acceleration: 9.80665
+    imu0_nodelay: false
+    imu0_differential: false
+    imu0_relative: false
+    imu0_queue_size: 1
 
-
-
-
-    initial_state: [5.0,  4.0,  3.0,
-                    0.0,  0.0,  1.0,
-                    0.1,  0.2,  0.3,
-                    0.0,  0.0,  0.0,
-                    0.0,  0.0,  0.0]
-
-    # ── (Optional) GNSS velocity ───────────────────────────────────────
-    # odom1: /vel
-    # odom1_config: [false, false, false, false, false, false, true, true, false,
-    #                false, false, false, false, false, false]
+    # ── Initial State ────────────────────────────────────────
+    # [X, Y, Z, roll, pitch, yaw, Vx, Vy, Vz, ωx, ωy, ωz, ax, ay, az]
+    initial_state: [5.0, 4.0, 3.0,
+                    0.0, 0.0, 1.0,
+                    0.1, 0.2, 0.3,
+                    0.0, 0.0, 0.0,
+                    0.0, 0.0, 0.0]
