--- a/revolt_state_estimator/config/navsat_transform.yaml
+++ b/revolt_state_estimator/config/navsat_transform.yaml
@@ -1,36 +1,37 @@
 navsat_transform_node:
   ros__parameters:
-    # ── Timing ───────────────────────────────────────────────────────────
-    use_sim_time: false
+    # ── Timing ────────────────────────────────────────────────
+    use_sim_time: false                 # real‐time
+    frequency: 30.0                     # how often to read /fix & publish /odometry/gps
+    delay: 3.0                          # wait 3 s before grabbing first datum
 
-    # How often (Hz) to check for new GPS fixes & (optionally) republish /gps/filtered
-    frequency: 30.0
+    # ── Heading Calibration ──────────────────────────────────
+    magnetic_declination_radians: 0.0   # your local declination (rad)
+    yaw_offset: 0.0                     # IMU’s “zero” offset so yaw=0→east
 
-    sensor_timeout: 10.0
-    transform_timeout: 10.0
+    # ── Altitude & Output ────────────────────────────────────
+    zero_altitude: false                # keep real alt in /odometry/gps
+    broadcast_utm_transform: false      # disable UTM TF (we’re in small local area)
+    publish_filtered_gps: true          # republish world→LL on /gps/filtered
 
-    # If the filter sees a jump back in time, the filter is reset (convenient for testing with rosbags!)
-    reset_on_time_jump: true
+    # ── Inputs ───────────────────────────────────────────────
+    gps0: /fix                          # raw NavSatFix from your GNSS
+    gps0_config: [  true,  true, false,   # use lat/lon → X,Y
+                    false, false, false,  # ignore roll,pitch,yaw
+                    false, false, false,  # no velocity
+                    false, false, false,  # no ang rates
+                    false, false, false]  # no accel
 
-    # Seconds to wait before computing the local origin (datum → world transform)
-    delay: 3.0
+    imu0: /imu/data                     # raw IMU data for heading
+    imu0_config: [false, false, false,
+                  false, false, false,
+                  false, false, false,
+                  false, false, false,
+                  false, false, false]  # navsat only uses IMU→heading internally
 
-    # ── Heading calibration ──────────────────────────────────────────────
-    # Magnetic declination at your location (radians)
-    magnetic_declination_radians: 0.0
-    # Add this to raw IMU yaw so that yaw=0 corresponds to east
-    yaw_offset: 0.0
+    use_odometry_yaw: false             # get heading from IMU not /odometry/filtered
+    wait_for_datum: false               # don’t block if no fix yet
 
-    # ── Altitude & UTM transforms ───────────────────────────────────────
-    zero_altitude: false             # force Z=0 in odometry output
-    broadcast_utm_transform: true    # publish UTM ↔ world_frame
-    broadcast_utm_transform_as_parent_frame: true
-    publish_filtered_gps: true       # republish back→converted NavSatFix on /gps/filtered
-
-    # ── Use odometry for heading? ────────────────────────────────────────
-    use_odometry_yaw: false
-    wait_for_datum: false            # don’t block waiting for first fix
-    # Manually seed datum [lat, lon, alt] if you prefer
-    #datum: [63.0, 10.0, 44.0]
-
-    print_diagnostics: true
+    # ── Manual Datum (optional override) ─────────────────────
+    # If you want to hard‐seed your origin instead of waiting for /fix:
+    datum: [63.0, 10.0, 44.0]            # [lat, lon, alt]
