tested and tuned EKF, now it works well :)))

--- a/revolt_state_estimator/config/revolt_ekf.yaml
+++ b/revolt_state_estimator/config/revolt_ekf.yaml
@@ -5,10 +5,30 @@
       Q: [10.0, 10.0, 1.0, 5.0, 2.0] # [x (m), y (m), yaw (rad), v (m/s), w_yaw (rad/s)]
 
       # Measurement noise, the smaller the value, the more you trust your measurements
+      # R_fix:
+      # σ_east  = 0.0000196888 [m]
+      # σ_north = 0.0000196888 [m]
+      # !!! NOTE: This R_fix is not in use anymore, because the GNSS sensor has a inbuilt dynamic covariance matrix, which we are using instead. That GNSS dynamic covariance matrix is superior. It can be found in the /fix topic itself :)
       R_fix:  [0.1, 0.1] # [x (m), y (m)]
+
+      # R_head:
+      # σ_heading = 0.074655 [rad]
       R_head: [0.05] # [yaw (rad)]
+
+      # R_vel:
+      # σ_velocity_x   = 0.002361 [m/s]
+      # σ_velocity_y   = 0.002684 [m/s]
+      # σ_velocity_yaw = 0.000001 [rad/s]
       R_vel:  [0.3, 0.3, 0.3] # [v_x (m/s), v_y (m/s), w_yaw (rad/s)]
+
+      # R_imu:
+      # σ_yaw           = 0.125189 [rad]
+      # σ_velocity_yaw  = 0.002886 [rad/s]
       R_imu:  [0.1, 0.1] # [yaw (rad), w_yaw (rad/s)]
+
+      # R_dv:
+      # σ_velocity_x = 0.001329 [m/s]
+      # σ_velocity_y = 0.001199 [m/s]
       R_dv:   [1.5, 1.5] # [v_x (m/s), v_y (m/s)]
 
       # Frequency at which how many times to predict per second
