--- a/revolt_state_estimator/package.xml
+++ b/revolt_state_estimator/package.xml
@@ -13,10 +13,10 @@
   <build_depend>std_msgs</build_depend>
 
   <exec_depend>rclpy</exec_depend>
+  <exec_depend>custom_msgs</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
-  <exec_depend>geometry_msgs</exec_depend>
-  <exec_depend>nav_msgs</exec_depend>
+  <exec_depend>geometry_msgs</exec_depend> 
   <exec_depend>tf2_ros</exec_depend>
   <exec_depend>ros2launch</exec_depend>
 
