non working aiding using every individual point

--- a/config/revolt_ekf.yaml
+++ b/config/revolt_ekf.yaml
@@ -4,10 +4,10 @@
       # Process noise, The smaller the value, the more you trust your model
       # I can not figure out why this is 12-dimensional and not 15-dimensional, but is taken from:
       # https://github.com/cybergalactic/MSS/blob/master/mssExamples/exINS_AHRS.m
-      Q: [0.2, 0.2, 0.2, 0.001, 0.001, 0.001, 0.1, 0.1, 0.1, 0.0001, 0.0001, 0.0001]
+      Q: [20.0, 20.0, 20.0, 5.0, 5.0, 5.0, 10.0, 10.0, 10.0, 5.0, 5.0, 5.0]
 
       # Measurement noise, the smaller the value, the more you trust your measurements
-      R_vel:  [0.3, 0.3, 0.3] # [v_x, v_y, v_z (m/s)]
+      # R_vel:  [0.3, 0.3, 0.3] # [v_x, v_y, v_z (m/s)]
 
       # Time constants for the bias models, chosen based on the matlab example
       T_acc: 100.0 # Eq. 14.195 in Fossen 2nd edition
