--- a/config/revolt_ekf.yaml
+++ b/config/revolt_ekf.yaml
@@ -20,6 +20,10 @@
       l_BR_B: [0.07872, 0.02159, -0.05919] # [x y z]
       q_R_B: [0.9723699204, 0.0, -0.2334453639, 0.0] # [x y z w]
 
+      # GT radar extrinsics
+      # l_BR_B: [0.077, 0.016, -0.063] # xyz
+      # q_R_B: [0.963, -0.021, -0.265, 0.021] # xyzw
+
       # ROS2 PARAMETERS
       state_estimate_topic: '/state_estimate/revolt' # Publisher
       imu_topic: '/vectornav_driver_node/imu/data'
@@ -33,7 +37,7 @@
         attitude_deg: [6.0, 6.0, 1.0e-6]
         position:     [1.0e-6, 1.0e-6, 1.0e-6]
         velocity:     [1.0e-1, 1.0e-1, 1.0e-1]
-        accel_bias:   [1.0e-2, 1.0e-2, 1.0e-2]
-        gyro_bias:    [1.0e-2, 1.0e-2, 1.0e-2]
+        accel_bias:   [1.0e-4, 1.0e-4, 1.0e-4]
+        gyro_bias:    [1.0e-4, 1.0e-4, 1.0e-4]
 
   
