--- a/config/revolt_ekf.yaml
+++ b/config/revolt_ekf.yaml
@@ -34,10 +34,12 @@
       radar_vr_sign: 1        # flip to -1 if your driver uses opposite Doppler sign
 
       initial_sigma:
-        attitude_deg: [6.0, 6.0, 1.0e-6]
-        position:     [1.0e-6, 1.0e-6, 1.0e-6]
-        velocity:     [1.0e-1, 1.0e-1, 1.0e-1]
-        accel_bias:   [1.0e-4, 1.0e-4, 1.0e-4]
-        gyro_bias:    [1.0e-4, 1.0e-4, 1.0e-4]
+        attitude_deg:       [6.0, 6.0, 1.0e-6]
+        position:           [1.0e-6, 1.0e-6, 1.0e-6]
+        velocity:           [1.0e-1, 1.0e-1, 1.0e-1]
+        accel_bias:         [1.0e-4, 1.0e-4, 1.0e-4]
+        gyro_bias:          [1.0e-4, 1.0e-4, 1.0e-4]
+        radar_position:     [3.0e-3, 3.0e-3, 3.0e-3]
+        radar_attitude_deg: [3.0e-1, 3.0e-1, 3.0e-1]
 
   
