feat: better plotting, correct verify_H and other parameters

--- a/config/parameters.yaml
+++ b/config/parameters.yaml
@@ -24,7 +24,11 @@
 
       # Gating
       radar_gating_enable: true
-      radar_gate_nsigma: 5.0
+      radar_gate_nsigma: 3.0
+
+      # BAD Radar -> IMU extrinsic transformation
+      # l_BR_B: [0.06872, 0.01159, -0.06919] # [x y z]
+      # q_R_B: [0.9723699204, 0.0, -0.2334453639, 0.0] # [x y z w]
 
       # Radar -> IMU extrinsic transformation
       l_BR_B: [0.07872, 0.02159, -0.05919] # [x y z]
@@ -49,7 +53,7 @@
         velocity:           [1.0e-1, 1.0e-1, 1.0e-1]
         accel_bias:         [1.0e-2, 1.0e-2, 1.0e-2]
         gyro_bias:          [1.0e-4, 1.0e-4, 1.0e-4]
-        radar_position:     [1.0e-3, 1.0e-3, 1.0e-3]
-        radar_attitude_deg: [2.5e-1, 2.5e-1, 2.5e-1]
+        radar_position:     [5.0e-3, 5.0e-3, 5.0e-3]
+        radar_attitude_deg: [7.0e-1, 7.0e-1, 7.0e-1]
 
   
